<resources>
    <string name="app_name">appsafe</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--register-->
    <string name="register_pass">ĐĂNG KÝ MẬT MÃ</string>

    <!--login-->
    <string name="enter_password">NHẬP MẬT MÃ</string>
    <string name="forgot_pass">Quên mật khẩu?</string>


    <!--main-->
    <string name="picture">Hình ảnh</string>
    <string name="video_image">Phim ảnh</string>
    <string name="sound">Âm thanh</string>
    <string name="note">Ghi chú</string>
    <string name="contact">Danh bạ</string>
    <string name="update">Nâng cấp</string>
    <string name="settings">Cài đặt</string>

    <!--number-->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_night">9</string>
    <string name="number_zero">0</string>
    <string name="OK">OK</string>


    <!--customdialog-->
    <string name="apply">Chấp nhận</string>
    <string name="cancel">Huỷ</string>
    <string name="new_pass">MẬT MÃ MỚI</string>
    <string name="create_tk">Chúc mừng ban vừa đăng ky thành công</string>

    <!--addContactFragment-->
    <string name="name">Tên</string>
    <string name="middle_name">Tên đệm</string>
    <string name="add_info">Thêm thông tin</string>
    <string name="address">Địa chỉ</string>
    <string name="company">Công ty</string>
    <string name="last_name">Họ</string>
    <string name="phone">Điện thoại</string>
    <string name="Email">Email</string>
    <string name="date">Ngày</string>

    <!--arrlist phone-->
    <string-array name="phone_list">
        <item>Di động</item>
        <item>Cơ quan</item>
        <item>Nhà riêng</item>
        <item>Số chínchọnh</item>
        <item>Số fax cơ quan</item>
        <item>số fax nhà riêng</item>
        <item>Số máy nhắn tin</item>
        <item>Khác</item>
        <item>Tuỳ chỉnh</item>
    </string-array>

    <!--arrlist email-->
    <string-array name="email_list">
        <item>Cơ quan</item>
        <item>Nhà riêng</item>
        <item>Khác</item>
        <item>Tuỳ chỉnh</item>
    </string-array>

    <!--arrlist date-->
    <string-array name="date_list">
        <item>Ngày sinh</item>
        <item>Ngày kỷ niệm</item>
        <item>Khác</item>
        <item>Tuỳ chỉnh</item>
    </string-array>
</resources>

