<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
        <TextView
                android:id="@+id/txt_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_pass"
                android:textColor="@color/color_white"
                android:background="@drawable/bg_button_round_top_corner_light"
                android:textAlignment="center"
                android:textSize="@dimen/text_18"
                android:paddingTop="@dimen/padding_16"
                android:paddingBottom="@dimen/padding_16"
        />
        <TextView
                android:id="@+id/txt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_tk"
                android:textSize="@dimen/text_18"
                android:textColor="@color/color_black"
                android:textAlignment="center"
                android:background="#ffff"
                android:padding="@dimen/padding_16"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               android:padding="@dimen/padding_16"
                android:background="@drawable/bg_button_round_bottom_corner_light"
        >
            <Button
                    android:id="@+id/btn_yes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_border_button"
                    android:layout_marginRight="@dimen/margin_8"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/btn_no"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_border_button"
                    android:layout_marginLeft="@dimen/margin_16"
            />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>