<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        android:paddingLeft="@dimen/padding_50"
        android:paddingRight="@dimen/padding_50"
        tools:context=".ui.user.register.RegisterFragment">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:background="@drawable/ic_border_bg_logo"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_width="@dimen/width_100"
            android:layout_height="@dimen/height_100"
            android:src="@drawable/logoapp"
            app:civ_border_width="1dp"
            app:civ_border_color="#F8F5F5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_pass"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_18"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:textSize="@dimen/dimen_50dp"
            android:focusable="false"
            android:clickable="false"
            android:longClickable="false"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#645F5F"
            app:layout_constraintTop_toBottomOf="@+id/edt_pass"/>

    <TextView
            android:id="@+id/txt_number_one"
            android:layout_gravity="start"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_one"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/edt_pass"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/txt_number_two"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_two"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@+id/txt_number_one"
            app:layout_constraintEnd_toStartOf="@+id/txt_number_three"
            app:layout_constraintTop_toTopOf="@+id/txt_number_one"/>

    <TextView
            android:id="@+id/txt_number_three"
            android:layout_gravity="end"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_three"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_number_two"/>

    <TextView
            android:id="@+id/txt_number_four"
            android:layout_gravity="start"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_four"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_one"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/txt_number_five"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_five"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@+id/txt_number_four"
            app:layout_constraintTop_toTopOf="@+id/txt_number_four"
            app:layout_constraintEnd_toStartOf="@+id/txt_number_six"/>

    <TextView
            android:id="@+id/txt_number_six"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_six"
            android:gravity="center"
            android:layout_gravity="end"
            android:background="@drawable/ic_bg_number"
            android:textColor="#ffff"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_number_five"/>

    <TextView
            android:id="@+id/txt_number_seven"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_seven"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_four"/>

    <TextView
            android:id="@+id/txt_number_eight"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_eight"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@+id/txt_number_seven"
            app:layout_constraintTop_toTopOf="@+id/txt_number_seven"
            app:layout_constraintEnd_toStartOf="@+id/txt_number_night"/>

    <TextView
            android:id="@+id/txt_number_night"
            android:layout_gravity="end"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_night"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_number_eight"/>

    <LinearLayout
            android:id="@+id/ln_ok"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_seven"
    >
        <TextView
                android:id="@+id/txt_ok"
                android:layout_gravity="start"
                android:layout_width="@dimen/width_60"
                android:layout_height="@dimen/height_60"
                android:textSize="@dimen/text_18"
                android:text="@string/OK"
                android:gravity="center"
                android:background="@drawable/ic_bg_number"
                android:textColor="#ffff"
        />

    </LinearLayout>



    <TextView
            android:id="@+id/txt_number_zero"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:textSize="@dimen/text_26"
            android:text="@string/number_zero"
            android:gravity="center"
            android:background="@drawable/ic_bg_number"
            android:textColor="@color/color_white"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@+id/ln_ok"
            app:layout_constraintTop_toTopOf="@+id/ln_ok"
            app:layout_constraintEnd_toStartOf="@+id/ln_remove_number"/>

    <LinearLayout
            android:id="@+id/ln_remove_number"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="@+id/txt_number_zero"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/txt_remove_number"
                android:layout_width="@dimen/width_30"
                android:layout_height="@dimen/height_30"
                android:textSize="@dimen/text_26"
                android:background="@drawable/ic_remove_number"
                android:textColor="#ffff"/>

    </LinearLayout>

    <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_marginTop="@dimen/margin_16"-->
            <!--android:layout_marginStart="@dimen/margin_8"-->
            <!--android:layout_marginEnd="@dimen/margin_8"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/txt_number_zero"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent">-->

        <!--<TextView-->
                <!--android:id="@+id/tv_terms_policies"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/quen_mat_khau"-->
                <!--android:textColor="#ffff"-->
                <!--android:textSize="@dimen/text_26"/>-->

        <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="#fff"/>-->

    <!--</LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>