<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_app"
        tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_30">
        <LinearLayout
                android:id="@+id/ln_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:padding="@dimen/padding_16"
                    android:background="@drawable/ic_border_bg_picture">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_picture"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"
                    android:text="@string/picture"
                    android:textColor="#ffff"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ln_picture"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:background="@drawable/ic_border_bg_video"
                    android:padding="@dimen/padding_16">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_video"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_image"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:background="@drawable/ic_border_bg_voice"
                    android:padding="@dimen/padding_16">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_voice"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/ln_picture"
                app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:background="@drawable/ic_border_bg_document"
                    android:padding="@dimen/padding_16">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_document"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ln_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_24"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout4">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:background="@drawable/ic_border_bg_contact"
                    android:padding="@dimen/padding_16">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_contact"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_24"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:background="@drawable/ic_border_bg_password"
                    android:padding="@dimen/padding_16">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_password"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mật khẩu"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:background="@drawable/ic_border_bg_update"
                    android:padding="@dimen/padding_16">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_update"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_8"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/ln_contact"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout10"
                app:layout_constraintStart_toEndOf="@+id/linearLayout7">

            <LinearLayout
                    android:layout_width="@dimen/width_80"
                    android:layout_height="@dimen/height_80"
                    android:background="@drawable/ic_border_bg_settings"
                    android:padding="@dimen/padding_16">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_settings"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="#ffff"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="@dimen/width_80"
                android:layout_height="@dimen/height_80"
                android:padding="@dimen/padding_16"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>